5. New Zappermasks: +BASECLASS, -MOOD, +MOOD
6. New DEBUG flag: HTTPACCESS, SMTPCLIENT
7. SMTPSERVERNAME ini entry expanded to allow SMTP auth support.
8. Siplet now supports multiple windows.
9. Players can now get HELP on deities by name.
10.Rhino (Javascript library) upgraded to 1.7R2
11.Several new Oracle Prayers added for sensing the skills of others
12.Behaviors ItemRefitter,ItemMender,ItemIdentifier have COST parameter now.
13.New DISABLE flags: EQUIPSIZE, AUTOPURGE, MSSP
14.WEAR command now supports specified wear locations.
15.New Locales: CaveGrid, WetCaveGrid
16.Note (coffeemud.ini): I3EMAIL and I3STATE changed to ADMINEMAIL and MUDSTATE
17.CoffeeMud now supports MSSP request at login (not the telnet code version -- kept colliding with mccp in tintin)
18.STAT command now supports titles.
19 Dye now supports light and bright colorings. Various other recipes trickled in here and there.
20.Wand magic words are now from lists.ini -- your players will need to relearn their trigger words.
21.New Scriptable command: MPMONEY, MPHEAL
22.Remorted chars get a single random max stat bonus point, instead of one to everything.
23.CharClasses now support max/caps in common skills, crafting skills, non-crafting common skills, and languages.
24.Injury text is a bit more decorated now. (Thanks gmdenna!)
25.Many many more mxp images scrounged up, and several old ones replaces with better ones.  There is a light at the end of the tunnel!
# Build ? Release ?
1. New Property (From 5.x snippets): Prop_IceBox (thx Robert!)
2. CharStats can now be customized with ADDCHARSTAT_ in coffeemud.ini file.
3. New Commands (From 4.x snippets): Experience, Wealth (thx again Robert)
4. RawMaterial can now be customized with ADDMATERIAL_ in coffeemud.ini file.
5. Wearable can now be customized with ADDWEARLOC_ in coffeemud.ini file.
6. Only Artisan's learn the Master common skills now.  Other classes have their common skill levels lowered.
7. New language: Sign Language
8.  