@@ -363,6 +363,27 @@ Its purpose is to detect when a reset, shutdown, or other disaster is about to \
 happen to the mob or item so that the quest can be stopped.  This prevents \
 unwanted properties/behaviors/changes from being saved to the database on accident.
 
+PRESENCEREACTION=\
+Ability    : PresenceReaction\n\r\
+Parameters : =[MOB/PLAYERNAME]\n\r\
+Parameters : (=[MOB/PLAYERNAME]~~)([COMMAND]=[PARMS]~~)[...]\n\r\
+Parameters : +[COMMAND]=[PARMS]\n\r\
+Example    : =warriorbob~~mood=happy~~aggressive=~~mudchat=elf~~\n\r\
+Description: \n\r\
+This temporary property governs temporary reactions in the form of behaviors, \
+properties, standard commands, or other effects.  These reactions \
+persist only so long as the mob/player the property was invoked against \
+remains in the same room as the invoker.  Intended as an tool for the faction \
+system, this property can be invoked as a skill against the target, or used in \
+other ways.  The parameters are a ~~ delimited list of ability, behavior, or \
+command names followed by an = sign and any parameters.  If the ability name \
+is empty, then it is assumed you are designating the mob or player being \
+reacted to.  As it is required to designate a mob being reacted to, this must \
+be eventually set either by parameters, or through invoking.\n\r\
+\n\r\
+This affect automatically removes itself and its subordinate effects whenever \
+the reacted to player/mob is not in the same room as the invoking mob.
+
 REGENERATION=\
 Ability    : Regeneration\n\r\
 Parameters : Classes of weapons which do permanent damage.\n\r\
