@@ -2230,4 +2230,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 5. Wearable can now be customized with ADDWEARLOC_ in coffeemud.ini file.
 6. Only Artisan's learn the Master common skills now.  Other classes have their common skill levels lowered.
 7. New language: Sign Language
-8.  
+8. New ZapperMask(s): -CHANCE
+9. New Property(s): PresenceReaction (for faction, etc)
